--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,2 @@
-RewriteEngine on 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1
+RewriteEngine On
+RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?url=$1
